--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,12 @@
     font-style: normal;
   }
 
+.eb-garamond {
+    font-family: "EB Garamond", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+  }
+
 @layer utilities {
   /* Animation keyframes */
   @keyframes fadeIn {
